# Leetcode-Algorithm-Practice

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini
Dynamic Programming/: DIvisor_game.py  Delete_And_Eran.py  Fibonacci.py  Least_Nums_Of_Distinct_After_K_Removals.py  PascalTriag.py  Pascal_triag_II.py  Trapping_rain_water.py
Linked List/: MergeInBetweenLinkedList.py  ReversedLinkedLIst.py
Math & Geometry/: Add_Two_Number.py  Check_If_There_is_a_straight_light.py  Largest_Parameter_Triag.py  Palindrom_number.py  Power_Of_Three.py  Roman_to_integer.py  Unique_Paths.py  divisor_game.py  fibonnaci.py  nth_tribonacci_number.py  stone_game_III.py
Two pointers/: Intersect_of_two_linked_lsit.py  Remove_dup.py  l;inked_list_cycle_II.py  most_water.py  rearrange_by_sign.py  remove_dup_from_sorted_list_II.py  valid_palindrome_II.py
array-hashmap/: find_all_dups_in_array.py  first_missing_positive.py  largest_rectangle_in_histogram.py  minimum_number_of_operation_to_make_xor_equal_to_k.py  number_of_student_unable_to_eat_sandwich.py  reveal_cards_in_increasing_order.py  time_needed_to_but_a_tickets.py
array_string/: find_the_index_of_first_occurence.py  group_anagram.py  isomorphic_strings.py  length_of_last_word.py  longest_common_subsequence.py  longest_palindrome.py  longest_palindromic_substring.py  maximum_num_of_vowels_in_a_substring_in_given_string.py  maximum_of_word_found_in_sentence.py  merge_string_alternatively.py  minimum_remove_to_make_valid_paretheses.py  reverse_string.py
backtracking/: word_search.py
dfs&bfs/: island_perimeter.py  (+5 more)
(+99 files in other folders)
